--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
+    "react/jsx-no-bind": "off",
     "prettier/prettier": ["error"],
     "consistent-return": "off",
     "semi": "off",
