--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/react-router-dom": "^5.3.0",
+        "axios": "^0.21.4",
         "cross-env": "^7.0.3",
         "formik": "^2.2.9",
+        "json-server": "^0.16.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
@@ -29,6 +31,7 @@
     },
     "scripts": {
         "start": "cross-env TAILWIND_MODE=watch craco start",
+        "server": "json-server --watch src/db.json --port 5005",
         "build": "craco build",
         "test": "craco test",
         "eject": "react-scripts eject"
