--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "clsx": "^1.1.1",
         "cross-env": "^7.0.3",
         "formik": "^2.2.9",
-        "json-server": "^0.16.3",
+        "json-server": "^0.17.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
@@ -32,7 +32,7 @@
     },
     "scripts": {
         "start": "cross-env TAILWIND_MODE=watch craco start",
-        "server": "json-server --watch src/db.json --port 5005",
+        "server": "json-server src/db.json -m ./node_modules/json-server-auth --port 5005",
         "build": "craco build",
         "test": "craco test",
         "eject": "react-scripts eject"
@@ -74,6 +74,7 @@
         "eslint-plugin-react": "^7.26.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "husky": "^7.0.2",
+        "json-server-auth": "^2.1.0",
         "postcss": "^7",
         "postcss-cli": "^8.3.1",
         "prettier": "2.4.1",
