--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "recharts": "^2.1.4",
         "redux": "^4.1.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
@@ -59,6 +60,7 @@
         "@commitlint/cli": "^13.1.0",
         "@commitlint/config-conventional": "^13.1.0",
         "@types/react-redux": "^7.1.18",
+        "@types/recharts": "^1.8.20",
         "@types/redux": "^3.6.0",
         "@types/redux-devtools-extension": "^2.13.2",
         "@types/redux-thunk": "^2.1.0",
