--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cross-env": "^7.0.3",
         "formik": "^2.2.9",
         "json-server": "^0.17.0",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
